[tool.poetry]
name = "litex-template-2"
version = "0.1.0"
description = ""
authors = ["Ilia Sergachev <ilia@sergachev.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
litex = {path = "lib/litex", develop = true}
litedram = {path = "lib/litedram", develop = true}
liteeth = {path = "lib/liteeth", develop = true}
liteiclink = {path = "lib/liteiclink", develop = true}
litescope = {path = "lib/litescope", develop = true}
migen = "*"
pythondata-cpu-vexriscv = "*"
pythondata-software-picolibc = "*"
pythondata-software-compiler-rt = "*"
meson = "*"
pythondata-misc-tapcfg = "*"
pythondata-cpu-cva6 = {path = "lib/pythondata-cpu-cva6", develop = true}
pythondata-cpu-rocket = {path = "lib/pythondata-cpu-rocket", develop = true}
litex_verilog_axi_test = {path = "lib/litex_verilog_axi_test", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
